--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   z-index: 999;
 }
 .vue-calendar-content {
-  background: #f2f2f2;
+  background: #fff;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -65,6 +65,23 @@
   -ms-flex: auto;
   flex: auto;
   list-style: none;
+}
+.vue-calendar-content .vue-calendar-date-wrapper .month-bar {
+  text-align: center;
+  height: 0.6rem;
+  line-height: 0.6rem;
+  position: relative;
+  background: #fafafa;
+}
+.vue-calendar-content .vue-calendar-date-wrapper .month-bar:after {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  border-bottom: 1px solid #c9c3b7;
+  -webkit-transform: scaleY(0.5);
+  -webkit-transform-origin: 0 0;
 }
 .vue-component-calendar-content-transition {
   transition: all ease-in-out 0.3s;
