--- a/src/index.less
+++ b/src/index.less
@@ -28,7 +28,8 @@ li {
     -webkit-transform: scaleY(.5);
     -webkit-transform-origin: 0 0;
 }
-.one-px-line-top(){
+
+.one-px-line-top() {
     content: "";
     position: absolute;
     top: 0px;
@@ -55,9 +56,21 @@ li {
         position: relative;
         .text {
             float: left;
+            padding-left: 0.2rem;
+            color: #666666;
+            font-size: .32rem;
         }
-        a {
+        .btn {
             float: right;
+            margin-right: 0.2rem;
+            a {
+                color: #2eb6a8;
+                font-size: .30rem;
+                text-decoration: none;
+                padding: 0.1rem 0.20rem;
+                border: 0.02rem solid #2eb6a8;
+                border-radius: 0.06rem;
+            }
         }
         &:after {
             .one-px-line
@@ -68,14 +81,18 @@ li {
         line-height: 0.6rem;
         position: relative;
 
+        .weekend{
+            color: #fa967f;
+        }
         &:after {
-            .one-px-line
+            // .one-px-line
         }
         ul {
             display: -webkit-flex;
             display: -ms-flexbox;
             display: flex;
             li {
+                color: #666666;
                 -webkit-flex: auto;
                 -ms-flex: auto;
                 flex: auto;
@@ -85,13 +102,21 @@ li {
         }
     }
     .vue-calendar-date-wrapper {
+        height: 100%;
         overflow: auto;
-        height: 600px;
         // margin-top: 60px;
         // .v-c-c-m:nth-child(1){
         //     position: fixed;
         //     margin-top: -61px;
         // }
+        .first-month-bar {
+            position: fixed!important;
+            top: 1.5rem !important;
+            z-index: 1000;
+        }
+        .first-day-panel {
+            margin-top: 0.6rem;
+        }
         .month-bar {
             text-align: center;
             height: 0.6rem;
@@ -99,7 +124,7 @@ li {
             width: 100%;
             position: relative;
             background: #fafafa;
-            margin-top: -1px;
+            margin-top: -0.01rem;
             &:before {
                 .one-px-line-top;
             }
