--- a/src/index.less
+++ b/src/index.less
@@ -144,10 +144,14 @@ li {
                 width: 14.286%;
                 text-align: center;
                 position: relative;
-                height: 1.04rem;
-                line-height: 1.04rem;
+                height: 1rem;
+                line-height: 1rem;
+                color: #333333;
                 &:after {
                     .one-px-line;
+                }
+                &.selected{
+                    color: #fff;
                 }
             }
         }
