--- a/src/index.less
+++ b/src/index.less
@@ -1,13 +1,11 @@
 /*
  * base css
  */
-
 ul,
 li {
     margin: 0;
     padding: 0;
 }
-
 .vue-calendar-backdrop {
     position: absolute;
     width: 100%;
@@ -17,29 +15,26 @@ li {
     background: rgba(0, 0, 0, 0.7);
     z-index: 999;
 }
-
 .one-px-line() {
     content: "";
     position: absolute;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
+    bottom: 0;
+    left: 0;
+    right: 0;
     border-bottom: 1px solid #c9c3b7;
     -webkit-transform: scaleY(.5);
     -webkit-transform-origin: 0 0;
 }
-
 .one-px-line-top() {
     content: "";
     position: absolute;
-    top: 0px;
-    left: 0px;
-    right: 0px;
+    top: 0;
+    left: 0;
+    right: 0;
     border-bottom: 1px solid #c9c3b7;
     -webkit-transform: scaleY(.5);
     -webkit-transform-origin: 0 0;
 }
-
 .vue-calendar-content {
     background: #fff;
     position: absolute;
@@ -49,23 +44,23 @@ li {
     height: 75%;
     overflow: hidden;
     z-index: 1000;
-    font-size: .3rem;
+    font-size: 0.3rem;
     .vue-calendar-content-title-wrapper {
-        height: .90rem;
-        line-height: .90rem;
+        height: 0.90rem;
+        line-height: 0.90rem;
         position: relative;
         .text {
             float: left;
             padding-left: 0.2rem;
             color: #666666;
-            font-size: .32rem;
+            font-size: 0.32rem;
         }
         .btn {
             float: right;
             margin-right: 0.2rem;
             a {
                 color: #2eb6a8;
-                font-size: .30rem;
+                font-size: 0.30rem;
                 text-decoration: none;
                 padding: 0.1rem 0.20rem;
                 border: 0.02rem solid #2eb6a8;
@@ -89,11 +84,13 @@ li {
         ul {
             display: -webkit-flex;
             display: -ms-flexbox;
+            display: -webkit-box;
             display: flex;
             li {
                 color: #666666;
                 -webkit-flex: auto;
                 -ms-flex: auto;
+                -webkit-box-flex: 1;
                 flex: auto;
                 list-style: none;
                 text-align: center;
@@ -101,17 +98,13 @@ li {
         }
     }
     .vue-calendar-date-wrapper {
-        height: 100%;
+        -webkit-overflow-scrolling: touch;
         overflow: auto;
-        // margin-top: 60px;
-        // .v-c-c-m:nth-child(1){
-        //     position: fixed;
-        //     margin-top: -61px;
-        // }
+        height: 100%;
         .first-month-bar {
-            position: fixed!important;
-            top: 1.5rem !important;
-            z-index: 1000;
+            // position: fixed!important;
+            // top: 1.5rem !important;
+            // z-index: 1000;
         }
         .first-day-panel {
             margin-top: 0.6rem;
@@ -123,7 +116,7 @@ li {
             width: 100%;
             position: relative;
             background: #fafafa;
-            margin-top: -0.01rem;
+            // margin-top: -0.01rem;
             &:before {
                 .one-px-line-top;
             }
@@ -139,7 +132,8 @@ li {
                 overflow: hidden;
             }
             li {
-                float: left;
+                display: inline-block;
+                // float: left;
                 width: 14.286%;
                 text-align: center;
                 position: relative;
@@ -148,10 +142,25 @@ li {
                 color: #333333;
                 span {
                     position: relative;
+                    display: inline-block;
                     top: -0.15rem;
+                }
+                &.disabled{
+                    color: #a2a2a2;
                 }
                 &:after {
                     .one-px-line;
+                }
+                &.without-text{
+
+                    i{
+                        &:after{
+                            content:''!important;
+                        }
+                    }
+                }
+                &.border-radius{
+                    border-radius: 0.06rem!important;
                 }
                 &.selected {
                     &-start {
@@ -170,9 +179,6 @@ li {
                     &-end {
                         color: #fff;
                         background: #2eb6a8;
-                        i{
-                            // width: 100%;
-                        }
                         i:after {
                             position: absolute;
                             top: 0.2rem;
@@ -186,29 +192,28 @@ li {
                     &-line {
                         background: #e0f4f2;
                         color: #333;
-                        border-top: 1px solid #2eb6a8;
-                        height: 0.98rem;
-                        line-height: 0.98rem;
-                        border-bottom: 1px solid #2eb6a8;
+                        border-top: 0.01rem solid #2eb6a8;
+                        height: 0.98rem!important;
+                        line-height: 0.98rem!important;
+                        border-bottom: 0.01rem solid #2eb6a8;
+                        margin-top: -0.01rem;
                     }
                 }
             }
         }
     }
 }
-
 .vue-component-calendar-content-transition {
+    -webkit-transition: all ease-in-out 0.3s;
     transition: all ease-in-out 0.3s;
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
 }
-
 .vue-component-calendar-content-enter,
 .vue-component-calendar-content-leave {
     -webkit-transform: translate3d(0, 100%, 0);
     transform: translate3d(0, 100%, 0);
 }
-
 .expand-enter,
 .expand-leave {
     opacity: 0;
