--- a/src/index.less
+++ b/src/index.less
@@ -107,7 +107,7 @@ li {
             // z-index: 1000;
         }
         .first-day-panel {
-            margin-top: 0.6rem;
+            // margin-top: 0.6rem;
         }
         .month-bar {
             text-align: center;
