--- a/src/index.less
+++ b/src/index.less
@@ -140,26 +140,53 @@ li {
                 height: 1rem;
                 line-height: 1rem;
                 color: #333333;
-                span {
+                .dd {
                     position: relative;
                     display: inline-block;
                     top: -0.15rem;
                 }
-                &.disabled{
+                &.disabled {
                     color: #a2a2a2;
                 }
                 &:after {
                     .one-px-line;
                 }
-                &.without-text{
-
-                    i{
-                        &:after{
-                            content:''!important;
+                &.without-text {
+                    i {
+                        &:after {
+                            content: ''!important;
                         }
                     }
                 }
-                &.border-radius{
+                &.is-holiday {
+                    .holiday {
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+                        left: 0;
+                        bottom: 0;
+                        &:before {
+                            width: 0;
+                            height: 0;
+                            content: '';
+                            position: absolute;
+                            bottom: 0;
+                            right: 0;
+                            border-bottom: 0.35rem solid #cccccc;
+                            border-left: 0.35rem solid transparent;
+                        }
+                        &:after {
+                            content: '假';
+                            position: absolute;
+                            bottom: 0.02rem;
+                            right: 0.02rem;
+                            font-size: 0.16rem;
+                            color: #fff;
+                            line-height: 0.2rem;
+                        }
+                    }
+                }
+                &.border-radius {
                     border-radius: 0.06rem!important;
                 }
                 &.selected {
