--- a/src/index.less
+++ b/src/index.less
@@ -120,7 +120,8 @@ li {
     }
     .vue-calendar-date-wrapper {
         -webkit-overflow-scrolling: touch;
-        overflow: hidden;
+        overflow-scrolling: touch;
+        overflow: auto;
         position: relative;
         margin-top: -0.6rem;
         .month-bar {
